// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid password 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic RGFrb3RhX1NtaXRoQGhvdG1haWwuY29tOm9wc1VBcW9KbEVHQnVuOHpKYQ==",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email/password were/was wrong or not provided",
      "name": "EmailOrPasswordIncorrect",
      "status": 401,
    },
  },
  "url": "/auth/local/login",
}
`;

exports[`invalid token: not formated 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic Um93ZW5hX0VyZG1hbjc1QHlhaG9vLmNvbXVPWUFiOTlsRlpQVU9tTw==",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email and password not provided",
      "name": "BadBasicToken",
      "status": 401,
    },
  },
  "url": "/auth/local/login",
}
`;

exports[`invalid token: not provided 1`] = `
Object {
  "req": Object {
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email and password not provided",
      "name": "BadBasicToken",
      "status": 401,
    },
  },
  "url": "/auth/local/login",
}
`;

exports[`non existing user 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic QWxleHphbmRlci5XaGl0ZTU0QHlhaG9vLmNvbW9wczpBVzBBN3RBUVhfNk44R1g=",
    },
    "method": "POST",
  },
  "res": Object {
    "data": null,
    "error": Object {
      "details": null,
      "message": "email/password were/was wrong or not provided",
      "name": "EmailOrPasswordIncorrect",
      "status": 401,
    },
  },
  "url": "/auth/local/login",
}
`;

exports[`success 1`] = `
Object {
  "req": Object {
    "headers": Object {
      "Authorization": "Basic SmF6bHluX1BvdXJvcy1TY2hhbWJlcmdlcjY3QHlhaG9vLmNvbTpsNHVhblljT2h0emtLQzA=",
    },
    "method": "POST",
  },
  "res": Object {
    "data": Object {
      "__v": 0,
      "_id": Any<String>,
      "createdAt": Any<String>,
      "displayName": Any<String>,
      "email": "Jazlyn_Pouros-Schamberger67@yahoo.com",
      "providers": Array [
        "local",
      ],
      "token": Any<String>,
      "updatedAt": Any<String>,
    },
  },
  "url": "/auth/local/login",
}
`;
